Creato con Colab

--- a/Tuplet_Extractor_LLM.ipynb
+++ b/Tuplet_Extractor_LLM.ipynb
@@ -21,13 +21,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-VuenKPqoNfS",
-        "outputId": "b1754a93-e509-4635-ec27-d15268cddd0b"
+        "outputId": "31b9fc43-ac1d-46f7-a8fd-6f441e5aa1f2"
       },
       "outputs": [
         {
@@ -44,13 +44,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nj8FZCXshH-Y",
-        "outputId": "dd4d7b0b-9389-494d-8cda-b8872ba29524"
+        "outputId": "2493db1a-cf8a-4737-e3fa-4c37fb06fb33"
       },
       "outputs": [
         {
@@ -80,13 +80,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "X15zY5debUpP",
-        "outputId": "c11af587-2aac-41a5-d739-3d5094821c40"
+        "outputId": "3067798d-c252-4069-93ef-e9e2d6f249d9"
       },
       "outputs": [
         {
@@ -96,7 +96,7 @@
             "Looking in indexes: https://pypi.org/simple, https://jllllll.github.io/llama-cpp-python-cuBLAS-wheels/AVX2/cu122\n",
             "Collecting llama-cpp-python\n",
             "  Downloading https://github.com/jllllll/llama-cpp-python-cuBLAS-wheels/releases/download/wheels/llama_cpp_python-0.2.26%2Bcu122-cp311-cp311-manylinux_2_31_x86_64.whl (28.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m28.1/28.1 MB\u001b[0m \u001b[31m48.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m28.1/28.1 MB\u001b[0m \u001b[31m75.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting typing-extensions>=4.5.0 (from llama-cpp-python)\n",
             "  Using cached typing_extensions-4.13.2-py3-none-any.whl.metadata (3.0 kB)\n",
             "Collecting numpy>=1.20.0 (from llama-cpp-python)\n",
@@ -184,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "kpXQGhHlij6q"
       },
@@ -205,54 +205,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 32,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176,
-          "referenced_widgets": [
-            "adbe169d947e46b6a6406876188e2dfd"
-          ]
+          "base_uri": "https://localhost:8080/"
         },
         "id": "WsYot3Rz1NVf",
-        "outputId": "760a8321-8149-4b38-85b5-722ccc7c3a7c"
+        "outputId": "f15e6612-d91d-4c8b-bcff-a0d54a77ef10"
       },
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stderr",
           "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/huggingface_hub/utils/_auth.py:94: UserWarning: \n",
-            "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
-            "To authenticate with the Hugging Face Hub, create a token in your settings tab (https://huggingface.co/settings/tokens), set it as secret in your Google Colab and restart your session.\n",
-            "You will be able to reuse this secret in all of your notebooks.\n",
-            "Please note that authentication is recommended but still optional to access public models or datasets.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "adbe169d947e46b6a6406876188e2dfd",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Llama-3-8B-Instruct-v0.10.Q8_0.gguf:   0%|          | 0.00/8.54G [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "metadata": {
-            "tags": null
-          },
           "name": "stdout",
-          "output_type": "stream",
           "text": [
             "My model path: models/Llama-3-8B-Instruct-v0.10.Q8_0.gguf\n"
           ]
@@ -293,7 +257,7 @@
       "metadata": {
         "id": "E0Xn9dRQMEvW"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -327,13 +291,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "z0_onscHeKt4",
-        "outputId": "9b3ec268-dea7-4e9e-8a2b-501b604a509f"
+        "outputId": "88cd112c-1039-4e49-bfbf-3e7362b98fe4"
       },
       "outputs": [
         {
@@ -345,27 +309,27 @@
             "1   2  https://web.archive.org/web/20161015002001/htt...   \n",
             "2   3  https://web.archive.org/web/20160928083422/htt...   \n",
             "\n",
-            "                                              TITOLO               SOURCE  \\\n",
+            "                                               TITLE               SOURCE  \\\n",
             "0  Pope Francis Shocks World, Endorses Donald Tru...  Ending the Fed News   \n",
             "1  IT’S OVER: Hillary’s ISIS Email Just Leaked & ...  Ending the Fed News   \n",
             "2  Just Read the Law: Hillary is Disqualified fro...  Ending the Fed News   \n",
             "\n",
-            "                                               TESTO  \\\n",
+            "                                                TEXT  \\\n",
             "0  VATICAN CITY – News outlets around the world a...   \n",
             "1  Today Wikileaks released what is, by far, the ...   \n",
             "2  We’re so used to complicated problems that we ...   \n",
             "\n",
-            "                   CAMPAGNA THREAT ACTOR TIPO  \n",
-            "0  Viral Fake Election News          NaN  WEB  \n",
-            "1  Viral Fake Election News          NaN  WEB  \n",
-            "2  Viral Fake Election News          NaN  WEB  \n"
+            "                   CAMPAIGN    THREAT ACTOR TYPE  \n",
+            "0  Viral Fake Election News  Ovidiu Drobota  WEB  \n",
+            "1  Viral Fake Election News  Ovidiu Drobota  WEB  \n",
+            "2  Viral Fake Election News  Ovidiu Drobota  WEB  \n"
           ]
         }
       ],
       "source": [
         "import pandas as pd\n",
         "\n",
-        "df = pd.read_excel('/content/DisinformNews Dataset.xlsx')\n",
+        "df = pd.read_excel('dataset.xlsx')\n",
         "print(df.head(3))"
       ]
     },
@@ -380,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "VncP0-XokqtB"
       },
@@ -389,31 +353,31 @@
         "# URL , TITOLO, SOURCE, TESTO, CAMPAGNA , THREAT ACTOR, TIPO\n",
         "colonna_id= df['ID']\n",
         "colonna_url = df['URL']\n",
-        "colonna_titolo = df['TITOLO']\n",
+        "colonna_titolo = df['TITLE']\n",
         "colonna_source = df['SOURCE']\n",
-        "colonna_testo = df['TESTO']\n",
-        "colonna_campagna= df['CAMPAGNA']\n",
+        "colonna_testo = df['TEXT']\n",
+        "colonna_campagna= df['CAMPAIGN']\n",
         "colonna_threat_actor = df['THREAT ACTOR']\n",
-        "colonna_tipo = df['TIPO']"
+        "colonna_tipo = df['TYPE']\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QIJAgUxHvyfj",
-        "outputId": "1f06861f-7662-4c79-bd77-8238a36cff78"
+        "outputId": "fa5a560d-a6b0-4112-c6a5-6c50519ea217"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "VATICAN CITY – News outlets around the world are reporting on the news that Pope Francis has made the unprecedented decision to endorse a US presidential candidate. His statement in support of Donald Trump was released from the Vatican this evening: “I have been hesitant to offer any kind of support for either candidate in the US presidential election but I now feel that to not voice my concern would be a dereliction of my duty as the Holy See. A strong and free America is vitally important in maintaining a strong and free world and in that sense what happens in American elections affects us all. The Rule of Law is the backbone of the American government as it is in any nation that strives for freedom and I now fear that the Rule of Law in America has been dealt a dangerous blow. The FBI, in refusing to recommend prosecution after admitting that the law had been broken on multiple occasions by Secretary Clinton, has exposed itself as corrupted by political forces that have become far too powerful.Though I don’t agree with Mr. Trump on some issues, I feel that voting against the powerful political forces that have corrupted the entire American federal government is the only option for a nation that desires a government that is truly for the people and by the people.  For this primary reason I ask, not as the Holy Father, but as a concerned citizen of the world that Americans vote for Donald Trump for President of the United States.” Sources within the Vatican reportedly were aware that the Pope had been discussing the possibility of voicing his concern in the US presidential election but apparently were completely unaware that he had made a decision on going forward with voicing this concern until his statement was released this evening from the Vatican. Stay tuned to WTOE 5 News for more on this breaking news.\n",
-            "1841\n"
+            "VATICAN CITY – News outlets around the world are reporting on the news that Pope Francis has made the unprecedented decision to endorse a US presidential candidate. His statement in support of Donald Trump was released from the Vatican this evening: “I have been hesitant to offer any kind of support for either candidate in the US presidential election but I now feel that to not voice my concern would be a dereliction of my duty as the Holy See. A strong and free America is vitally important in maintaining a strong and free world and in that sense what happens in American elections affects us all. The Rule of Law is the backbone of the American government as it is in any nation that strives for freedom and I now fear that the Rule of Law in America has been dealt a dangerous blow. The FBI, in refusing to recommend prosecution after admitting that the law had been broken on multiple occasions by Secretary Clinton, has exposed itself as corrupted by political forces that have become far too powerful.Though I don’t agree with Mr. Trump on some issues, I feel that voting against the powerful political forces that have corrupted the entire American federal government is the only option for a nation that desires a government that is truly for the people and by the people. For this primary reason I ask, not as the Holy Father, but as a concerned citizen of the world that Americans vote for Donald Trump for President of the United States.” Sources within the Vatican reportedly were aware that the Pope had been discussing the possibility of voicing his concern in the US presidential election but apparently were completely unaware that he had made a decision on going forward with voicing this concern until his statement was released this evening from the Vatican. Stay tuned to WTOE 5 News for more on this breaking news.\n",
+            "1840\n"
           ]
         }
       ],
@@ -433,13 +397,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "dK8lgU85hM-A"
       },
       "outputs": [],
       "source": [
-        "#torch.cuda.empty_cache() # Clear GPU cache"
+        "torch.cuda.empty_cache() # Clear GPU cache"
       ]
     },
     {
@@ -453,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "id": "xSyxPuAXgfut"
       },
@@ -576,8 +540,32 @@
       "metadata": {
         "id": "3EfB8cSiuzuN"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from llama_cpp import Llama\n",
+        "llm = Llama(model_path=model_path)\n"
+      ],
+      "metadata": {
+        "id": "dosQ3wYuYUKz",
+        "outputId": "6a694ae3-67da-43c5-d426-5f5922110b9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "AVX = 1 | AVX2 = 1 | AVX512 = 0 | AVX512_VBMI = 0 | AVX512_VNNI = 0 | FMA = 1 | NEON = 0 | ARM_FMA = 0 | F16C = 1 | FP16_VA = 0 | WASM_SIMD = 0 | BLAS = 1 | SSE3 = 1 | SSSE3 = 1 | VSX = 0 | \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -592,68 +580,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "IY3ks3DJejoa",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7c4e03af-9384-4e25-8374-8ca7271af046"
+        "id": "IY3ks3DJejoa"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Llama.generate: prefix-match hit\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            " <<SYS>> </s>\n",
-            "<s>[INST] <<SYS>> \n",
-            "Extract the main actions and relationships between entities mentioned in the text. Represent these as subject-verb-object (SVO) tuples.\n",
-            "\n",
-            "1. Paul Horner - was paid - $3,500\n",
-            "2. Paul Horner - answered - a Craigslist ad\n",
-            "3. Paul Horner - interviewed - with them\n",
-            "4. Paul Horner - got the part \n",
-            "5. Paul Horner - received - an actual check from 'Women Are The Future'\n",
-            "6. Paul Horner - was told - if anyone asked, he should talk about Bernie Sanders\n",
-            "7. Tom Downey - knew - those weren’t real protesters\n",
-            "8. Tom Downey - shouted - at them the whole time\n",
-            "9. Tom Downey - got high-fives - from his fellow Trump supporters\n",
-            "10. Paul Horner - saw most of the people - during the interview and training for the rally\n",
-            "11. Paul Horner - learned - they only paid Latinos $500, Muslims $600, African Americans $750, and illegals received $300 across the board\n",
-            "12. Sarah Bradley - said she would protest Trump for free \n",
-            "13. Sarah Bradley - thinks Trump supporters are the last kind of people to donate socks to the homeless\n",
-            "14. David Mikkelson - told ABC News that he approves of what a story like this is accomplishing\n",
-            "15. David Mikkelson - makes lots of money when a story goes viral and Snopes debunks it \n",
-            "16. David Mikkelson - said they copy and paste parts of the original article into theirs, write a couple sentences, and that’s it\n",
-            "17. David Mikkelson - wants to be clear about their website not doing any journalism or creative work\n",
-            "18. David Mikkelson - thinks someone should start a company that debunks Snopes’ debunkings \n",
-            "19. Kim LaCapria and Jeff Zarronandia - accuse the site of being a clickbait fake news site \n",
-            "20. ABC News - reached out to Hillary Clinton’s campaign for comment but did not receive a response\n",
-            "\n",
-            "</s>\n",
-            "<s>[INST] <<SYS>> </s>  <s>[INST] <<SYS>> \n",
-            "The extracted tuples represent main actions and relationships between entities in the text, which are mostly about individuals being paid or involved in protests, people's opinions on Trump supporters, and the workings of Snopes.com. The subject-verb-object (SVO) format helps to identify these key elements.\n",
-            "\n",
-            "Some interesting points from the text include:\n",
-            "\n",
-            "1. Paul Horner was paid $3,500 to protest at a Donald Trump rally.\n",
-            "2. He believes the group he worked with might be affiliated with Hillary Clinton's campaign.\n",
-            "3. Tom Downey, a Trump supporter, claims that protesters were too organized and smart not to be real, but rather paid individuals.\n",
-            "4. Sarah Bradley, a spokeswoman for Sock It Forward, disagrees with paying people to protest and thinks it's hypocritical of Trump supporters who don't donate to the homeless.\n",
-            "5. David Mikkelson, founder of Snopes.com, acknowledges that his website makes money by debunking viral stories but doesn’t do actual journalism or creative work.\n",
-            "\n",
-            "These points highlight the main actions and relationships between entities in the text, showcasing a mix of political opinions, protests, and the workings of online news sites like Snopes.com. </s>\n",
-            "<s>[INST] <<SYS>>  </s> <s>[INST] <<SYS>> \n",
-            "The extracted tuples represent key elements from the given text, which mainly revolve around individuals being paid or involved in protests, people's opinions on Trump supporters, and the workings of Snopes.com.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "# Taglia il testo per non superare il limite del modello (circa 200 parole)\n",
+        "testo_ridotto = ' '.join(colonna_testo[9].split()[:200])\n",
+        "\n",
         "user_input = f'''Read the following text and identify all the tuples in the subject-verb-object form. The tuples should reflect the main actions and relationships between the entities mentioned in the text. Follow these steps:\n",
         "\n",
         "              Identify the subject of the action.\n",
@@ -667,12 +600,11 @@
         "              Tuple: 'John - gave - a book to Mary'\n",
         "              ##END LIST##\n",
         "\n",
-        "              Apply this method to the following text:, {colonna_testo[9]} '''\n",
-        "\n",
+        "              Apply this method to the following text:, {testo_ridotto} '''\n",
         "\n",
         "# Invia il messaggio e stampa la risposta\n",
         "response = model_run(user_input)\n",
-        "print(response)"
+        "print(response)\n"
       ]
     },
     {
@@ -1301,9 +1233,6 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {}
     }
   },
   "nbformat": 4,
